// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }
  >
    
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`existing description 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className={
      Object {
        "data-css-wb46si": "",
      }
    }
  >
    “
    Please pick up my bulk items. 
    ”
  </div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }
  >
    
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`service with metadata 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }
  >
    
  </div>
  <div>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Please provide any other relevant information:
         
      </span>
      <textarea
        className="txt-f"
        name="ST-CMTS"
        onChange={[Function]}
        rows="5"
        value=""
      />
    </label>
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
